Fix horizontal scrolling

--- a/media/main.scss
+++ b/media/main.scss
@@ -30,6 +30,7 @@ $code-bg: rgba(175, 184, 193, 0.2);
 $font-size-base: 18px;
 $line-height-base: 1.428571429;
 $line-height-computed: floor(($font-size-base * $line-height-base));
+$body-margin: 8px;
 
 $grayish: lighten(desaturate($brand-primary, 60%), 50%);
 
@@ -51,6 +52,7 @@ body {
     line-height: $line-height-base;
     font-family: $font-family-base;
     color: $text-color;
+    margin: $body-margin;
     @media (prefers-color-scheme: dark) {
         color: $text-color-dark;
         background-color: $bg-dark;
@@ -183,7 +185,7 @@ ul, ol {
     }
 }
 ul li, ol li {
-    margin: 0.4em 0;
+    margin: $body-margin 0;
     ul li {
         // Second level is more compact.
         margin: 0;
@@ -471,12 +473,12 @@ pre code, pre code.hljs {
     word-wrap: normal;
     white-space: pre;
 
+    border-radius: 3px;
+
     // Some nonsense to make code background hang "outside" of the column.
     padding: 1em;
-    margin-left: -1em;
-    margin-right: -1em;
-
-    border-radius: 3px;
+    margin-left: -$body-margin;
+    margin-right: -$body-margin;
 }
 
 // Manually set colors for non-highlighted code.
